# tetrust

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml  in_progress.yaml  in_review.yaml  pr_test.yml  todo.yaml
resource/: README.md
src/: README.md  main.rs  route.rs  router.rs
src/bot/: tbp.rs
src/components/: game_ui.rs  gamebox.rs  main.rs  mod.rs  multi.rs  route.rs  scorebox.rs  single.rs
src/constants/: color.rs  keycode.rs  mod.rs  time.rs
src/game/: bag.rs  event.rs  game_info.rs  game_record.rs  manager.rs  mod.rs  point.rs  renderer.rs  spin_type.rs
src/game/blocks/: colors.rs  mod.rs  shapes.rs
src/game/board/: board.rs  cell.rs  mod.rs
src/game/calculate/: mod.rs  score.rs  valid_block.rs
src/game/das/: charging.rs
src/js_bind/: body.rs  document.rs  focus.rs  mod.rs  request_animation_frame.rs  write_text.rs
src/lib/: mod.rs
src/lib/bot/: mod.rs  tbp.rs
src/lib/components/: footer.rs  game_ui.rs  header.rs  mod.rs
src/lib/components/audio/: game_audio.rs
src/lib/components/setting/: arr.rs  das.rs  (+2 more)
src/lib/constants/: character.rs  mod.rs  setting.rs
src/lib/game/: bag.rs  clear_info.rs  game_info.rs  game_record.rs  local_manager.rs  mod.rs  renderer.rs
src/lib/js_bind/: localstorage.rs  mod.rs  window.rs
src/lib/options/: game_option.rs  key_settings.rs
src/lib/types/: mod.rs
src/lib/util/: random.rs
src/lib/wasm_bind/: mod.rs  render.rs
src/options/: game_option.rs  mod.rs
src/pages/: main.rs  mod.rs  router.rs  setting.rs  single.rs
src/types/: key_state.rs
src/util/: mod.rs  rotate.rs
src/wasm_bind/: draw.rs  render.rs
(+10 files in other folders)
